# AI-Markdown-Manager

./: .gitignore  README.md  app.py  convert.py  main.ipynb  pyproject.toml  test.md
ai_report_manager/: __init__.py
app/: app.py
notebook/: main.ipynb
src/: agents.py  convert.py  nodes.py  report_manager.py  tools.py  transcribe.py
