[project]
name = "ai-markdown-manager"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "langchain-core (>=0.3.66,<0.4.0)",
    "langchain-mistralai (>=0.2.10,<0.3.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langgraph (>=0.5.0,<0.6.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "wavio (>=0.0.9,<0.0.10)",
    "transformers (>=4.53.0,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tf-keras (>=2.19.0,<3.0.0)",
    "utils (>=1.0.2,<2.0.0)",
    "optional (>=0.0.1,<0.0.2)",
    "streamlit (>=1.46.1,<2.0.0)",
    "streamlit-audiorecorder (>=0.0.6,<0.0.7)",
    "pdf2docx (>=0.5.8,<0.6.0)",
    "xhtml2pdf (>=0.2.17,<0.3.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false